--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
 
 <body>
   <div class="nav-bar"></div>
-  <div id="app">
-
-  </div>
+  <div id="app"></div>
+  <div id="score"></div>
   <script src="https://unpkg.com/vue"></script>
   <script src="./index.js"></script>
 </body>
